fixed cards overlap with navbar and set autofocus for searchbox

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ h2 {
   right: 0;
   width: 100%;
   background: rgba(60, 60, 60, 1);
+  z-index: 998;
 }
 
 .Nav ul {
@@ -77,7 +78,7 @@ h3 {
   padding-bottom: 10px;
   border-bottom: 3px solid orange;
   height: 100%;
-  margin-top: 100px;
+  margin-top: 110px;
   text-align: center;
 }
 
@@ -101,7 +102,6 @@ h3 {
 
 .Card:hover {
   box-shadow: 0px 0px 20px 0px orange;
-  transform: translateY(-1%);
 }
 
 .Card:focus {
@@ -146,6 +146,12 @@ h3 {
   text-align: center;
   font-weight: 600;
   font-style: italic;
+}
+
+@media (min-width: 600px) {
+  .Card:hover {
+    transform: translateY(-1%);
+  }
 }
 
 .wrapper {
@@ -307,13 +313,14 @@ h3 {
   top: 0;
   right: 0;
   width: 100%;
-  margin-top: 60px;
+  /* margin-top: 60px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(60, 60, 60, 1);
+  /* background-color: rgba(60, 60, 60, 1); */
   transition: all 200ms ease-in-out;
+  z-index: 999;
 
 }
 
@@ -325,23 +332,25 @@ h3 {
 }
 
 .SearchBox p {
-  padding: 5px 10px;
+  margin: 0;
+  padding: 10px 20px;
   color: inherit;
+  width: 100%;
+  text-align: center;
   /* border: 2px solid orange; */
-  border-radius: 5px;
   transition: all 50ms ease-in;
+  background-color: rgba(60, 60, 60, 1);
 }
 
 .SearchBox p:hover {
-  /* background-color: orange; */
-  /* color: black; */
-  box-shadow: 0px 0px 0 1px orange;
+  box-shadow: none;
+  color: orange;
+  font-weight: 600;
   cursor: pointer;
 }
 
 @media (min-width: 600px) {
   .SearchBox {
-
     margin-top: auto;
    }
 
@@ -351,7 +360,6 @@ h3 {
 
   .SearchBox p {
     align-self: flex-end;
-    margin: 10px 15px 10px 10px;
   }
   .SearchBox p:hover {
     box-shadow: none;
